--- a/MovieBooking 2/src/main/resources/templates/component/UserSideBar.html
+++ b/MovieBooking 2/src/main/resources/templates/component/UserSideBar.html
@@ -32,7 +32,8 @@
   </div>
   <div class="card-selection align-items-center">
     <ul class="list-group list-group-flush">
-      <li class="list-group-item w-100" style="text-align: left;">Account information</li>
+      <li class="list-group-item w-100" style="text-align: left;">
+        <a class="history-score" style="color: black;text-decoration: none;" th:href="@{/edit}">Account Information</a>
       <li class="list-group-item w-100" style="text-align: left; "><a class="history-score" style="color: black;text-decoration: none;" th:href="@{/view-history-score}">History Score</a></li>
       <li class="list-group-item w-100" style="text-align: left;"><a class="ticket-booking" style="color: black;text-decoration: none;" th:href="@{/member/booking-list}">Ticket Booking</a></li>
       <li class="list-group-item w-100" style="text-align: left;"><a class="booked-ticket" style="color: black;text-decoration: none;" th:href="@{/booked-ticket}">Booked Ticket</a></li>
