--- a/MovieBooking 2/src/main/resources/templates/edit-account.html
+++ b/MovieBooking 2/src/main/resources/templates/edit-account.html
@@ -187,6 +187,7 @@
                           aria-describedby="helpId"
                           th:field="*{identityCard}"
                           style="height: 45px"
+                          readonly
                   />
                   <small th:if="${#fields.hasErrors('identityCard')}" th:errors="*{identityCard}" class=""></small>
                   <small id="identity-err" class=""></small>
